style.css
body {
    margin: 0;
    min-height: 100%;
    color: white;
}

a {
    color: inherit;
    text-decoration: none;
}

ul {
    list-style-type: none;
    margin: 0;
}

#main-page-contents{
    min-height: 100vh;
    background-color:rgb(48, 48, 48);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.page-header, .page-navigation {
    align-self: stretch;

    width: 100%;
}

.page-header {
    padding: 20px;
    display: flex;
    justify-content: center;
}

/* #main-page-filler {
    width: 100%;
    flex: 1;

    overflow: hidden;
    display: flex;
} */

#main-page-filler {
    flex: 1;
    width: 100%;

    background-image:
        linear-gradient(to bottom, rgb(48, 48, 48) 0px, transparent 39px),
        linear-gradient(to top, rgb(48, 48, 48) 0px, transparent 39px),
        url("images/miller_center_view.jpg");

    background-size:
        100% 39px,
        100% 39px,
        cover;

    background-position:
        top center,
        bottom center,
        center center;

    background-repeat:
        no-repeat,
        no-repeat,
        no-repeat;
}

#main-page-background {
    flex: 1;
    width: 100%;
    height: auto;
    object-fit: cover;
    object-position: center center;
    display: block;
}

.page-navigation ul {
    margin-left: 40px;
    margin-right: 40px;
    padding: 10px;
    display: flex;
    justify-content: space-between;
}

